--- a/.github/workflows/crystal-ball.yaml
+++ b/.github/workflows/crystal-ball.yaml
@@ -19,7 +19,6 @@ jobs:
           CRYSTAL_NOMATCH_REGEX_FOO: '(\w+\s+){0,10}'
           # COMMENT_MSG: blah blah blah
         with:
-          org: ${{ github.repository_owner }}
-          repoName: dotfiles
+          repoName: ${{ github.repository	}}
           issueNum: ${{ github.event.issue.number }}
-          labels: invalid,crystall ball needed
+          labels: "invalid,crystall ball needed"
